--- a/HotelManagement/HotelManagement/Views/AccountsView.xaml
+++ b/HotelManagement/HotelManagement/Views/AccountsView.xaml
@@ -17,34 +17,36 @@
             DialogTheme="Inherit" IsOpen="{Binding IsOpenDialog}">
             <materialDesign:DialogHost.DialogContent>
                 <Grid Background="White">
-                    <Grid Height="250" Width="300">
+                    <Grid Height="280" Width="300">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Text="New Account" Margin="4" FontSize="18" FontWeight="Bold" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="1" Text="Default password is 1" Margin="4" FontSize="14"/>
+                        <TextBlock Grid.Row="0" Text="{Binding DialogTittle}" Margin="8" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"/>
+                        <TextBlock Grid.Row="1" Text="{Binding SubText}" Margin="8 4 4 12"/>
                         <TextBox Grid.Row="2" Margin="4"
                             Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                            VerticalAlignment="Top"
+                            VerticalAlignment="Top" IsReadOnly="{Binding IsReadOnlyUsername}"
                             AcceptsReturn="True" Text="{Binding Username}"
                             materialDesign:HintAssist.Hint="Username"/>
-                        <ComboBox Grid.Row="3" Grid.Column="1" x:Name="cbx_roles" ItemsSource="{Binding Roles}"
+                        <TextBlock Grid.Row="3" Text="{Binding ErrorMessage}" Margin="0 0 0 4" HorizontalAlignment="Center" FontSize="14" Foreground="Red"/>
+                        <ComboBox Grid.Row="4" Grid.Column="1" x:Name="cbx_roles" ItemsSource="{Binding Roles}"
                             Style="{StaticResource MaterialDesignOutlinedComboBox}" 
                             SelectedItem="{Binding SelectedRole}"
                             Margin="4" materialDesign:TextFieldAssist.PrefixText="Role: ">
                         </ComboBox>
-                        <Grid Grid.Row="4">
+                        <Grid Grid.Row="5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
                             <Button Grid.Column="0" HorizontalAlignment="Center" Margin="4"
                             Style="{StaticResource MaterialDesignRaisedButton}"
-                            Command="{Binding SaveNewAccountCommand}">
+                            Command="{Binding SaveAccountCommand}">
                                 <TextBlock Text="Save" FontSize="18"/>
                             </Button>
                             <Button Grid.Column="1" HorizontalAlignment="Center" Margin="4"
@@ -59,9 +61,10 @@
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                    <Grid Grid.Row="0" Background="{StaticResource PrimaryLightBrush}">
+                <Grid Grid.Row="0" Background="{StaticResource PrimaryLightBrush}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
                             <ColumnDefinition Width="*"/>
@@ -104,7 +107,44 @@
                             </StackPanel>
                         </Button>
                     </Grid>
-                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
+                <Border Grid.Row="1" Background="{StaticResource MaterialDesignChipBackground}" Padding="8">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="0.2*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="0.2*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="0.2*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="0.2*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock Text="Admin: "/>
+                            <TextBlock Text="{Binding NumberOfAdmins}" Margin="0 0 12 0"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock Text="Reservation: "/>
+                            <TextBlock Text="{Binding NumberOfReservations}" Margin="0 0 12 0"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="5" Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock Text="Receptionist: "/>
+                            <TextBlock Text="{Binding NumberOfReceptionists}" Margin="0 0 12 0"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="7" Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock Text="Cashier: "/>
+                            <TextBlock Text="{Binding NumberOfCashiers}" Margin="0 0 12 0"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="9" Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock Text="Undefined: "/>
+                            <TextBlock Text="{Binding NumberOfUndefined}" Margin="0 0 12 0"/>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+                <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Hidden">
                     <ItemsControl ItemsSource="{Binding Accounts}" HorizontalAlignment="left" Margin="0 5">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
@@ -114,30 +154,39 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <materialDesign:Card Margin="4"
-                                        Background="{StaticResource PrimaryLightBrush}"
-                                        Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"
-                                        Padding="0" Width="200">
-                                    <Grid>
+                                        Background="{StaticResource PrimaryHueMidBrush}"
+                                        Foreground="{DynamicResource PrimaryHueMidForegroundBrush}"
+                                        Padding="0" Width="140">
+                                    <Grid Margin="4">
                                         <Grid.RowDefinitions>
                                             <RowDefinition/>
                                             <RowDefinition/>
+                                            <RowDefinition Height="auto"/>
                                             <RowDefinition/>
                                         </Grid.RowDefinitions>
                                         <Grid Grid.Row="0">
                                             <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="80"/>
-                                                <ColumnDefinition/>
+                                                <ColumnDefinition Width="auto"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="auto"/>
                                             </Grid.ColumnDefinitions>
-                                            <TextBlock Grid.Column="0" Text="ID:" VerticalAlignment="Center"/>
-                                            <TextBlock Grid.Column="1" Text="{Binding id}" VerticalAlignment="Center" />
+                                            <TextBlock Grid.Column="0" Text="ID: " FontSize="12" Margin="0 0 2 0"/>
+                                            <TextBlock Grid.Column="1" Text="{Binding id}" FontSize="12"/>
+                                            <Button Width="Auto" Height="Auto" Grid.Column="2" Padding="4"
+                                                Style="{StaticResource MaterialDesignFlatButton}" 
+                                                Content="{materialDesign:PackIcon Kind=AccountEdit, Size=20}"
+                                                Command="{Binding RelativeSource={RelativeSource AncestorType=ItemsControl},Path=DataContext.EditAccountCommand}" 
+                                                CommandParameter="{Binding}" Foreground="White"/>
                                         </Grid>
                                         <Grid Grid.Row="1" Margin="2">
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="80"/>
-                                                <ColumnDefinition/>
-                                            </Grid.ColumnDefinitions>
-                                            <TextBlock Grid.Column="0" Text="Username:" VerticalAlignment="Center"/>
-                                            <TextBlock Grid.Column="1" Text="{Binding username}" VerticalAlignment="Center"/>
+                                            <TextBlock Text="{Binding username}" VerticalAlignment="Center" 
+                                                FontSize="18" FontWeight="Bold" TextTrimming="CharacterEllipsis"/>
+                                        </Grid>
+                                        <Separator Grid.Row="2" Style="{StaticResource MaterialDesignLightSeparator}" />
+                                        <Grid Grid.Row="3" Margin="2">
+                                            <TextBlock Text="{Binding permission}" 
+                                            VerticalAlignment="Center" 
+                                                TextTrimming="CharacterEllipsis"/>
                                         </Grid>
                                     </Grid>
                                 </materialDesign:Card>
