--- a/HotelManagement/HotelManagement/Views/AccountsView.xaml
+++ b/HotelManagement/HotelManagement/Views/AccountsView.xaml
@@ -4,14 +4,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HotelManagement.Views"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
+             Name="AccountUC"
              mc:Ignorable="d" FontSize="16"
              FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              d:DesignHeight="600" d:DesignWidth="1000">
     <UserControl.DataContext>
         <viewModels:AccountViewModel/>
     </UserControl.DataContext>
+    <UserControl.Resources>
+        <viewModels:PassThroughConverter x:Key="passThroughConverter"/>
+    </UserControl.Resources>
     <Grid Background="White">
         <materialDesign:DialogHost Name="dialog" Identifier="AccountDialog" CloseOnClickAway="True" 
             DialogTheme="Inherit" IsOpen="{Binding IsOpenDialog}">
@@ -89,26 +94,31 @@
                                     <ColumnDefinition Width=".4*"/>
                                     <ColumnDefinition Width="auto"/>
                                     <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width=".2*"/>
                                 </Grid.ColumnDefinitions>
-                            <ComboBox x:Name="cbbSearch" BorderThickness="0.2" Padding="8 2 2 2" 
-                                BorderBrush="White" Foreground="White" 
-                                ItemsSource="{Binding SearchTypes}" SelectedItem="{Binding SelectedSearchType}"
-                                Style="{StaticResource MaterialDesignOutlinedComboBox}" 
-                                materialDesign:ColorZoneAssist.Mode="Inverted"
-                                VerticalContentAlignment="Center" Width="auto" >
-                            </ComboBox>
-                            <Separator Grid.Column="1" Background="White" Margin="1 0 1 0"/>
-                            <TextBox Grid.Column="2" Margin="5 0" 
-                                    Text="{Binding ContentSearch,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
+                                <ComboBox x:Name="cbbSearch" BorderThickness="0.2" Padding="8 2 2 2" 
+                                    BorderBrush="White" Foreground="White" 
+                                    ItemsSource="{Binding SearchTypes}" SelectedItem="{Binding SelectedSearchType}"
+                                    Style="{StaticResource MaterialDesignOutlinedComboBox}" 
+                                    materialDesign:ColorZoneAssist.Mode="Inverted"
+                                    VerticalContentAlignment="Center" Width="auto" >
+                                </ComboBox>
+                                <Separator Grid.Column="1" Background="White" Margin="1 0 1 0"/>
+                            <TextBox Grid.Column="2" Margin="5 0" Name="tbSearch"
                                     CaretBrush="White" VerticalContentAlignment="Center" 
-                                    FontSize="16" Foreground="White" 
-                                    materialDesign:HintAssist.Hint="Enter text to search" 
+                                    FontSize="16" Foreground="White" Text="{Binding ContentSearch,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                                    materialDesign:HintAssist.Hint="Type something..." 
                                     BorderBrush="Transparent">
-                                    <TextBox.InputBindings>
-                                        <KeyBinding Command="{Binding SearchAccountCommand}" Key="Return"/>
-                                    </TextBox.InputBindings>
-                                </TextBox>
-                            </Grid>
+                                <TextBox.InputBindings>
+                                    <KeyBinding Command="{Binding SearchAccountCommand}" Key="Return"/>
+                                </TextBox.InputBindings>
+                            </TextBox>
+                            <Button Grid.Column="3" Width="Auto" Height="Auto" 
+                                Style="{StaticResource MaterialDesignFlatButton}" 
+                                Content="{materialDesign:PackIcon Kind=Search, Size=19}" 
+                                Foreground="White" Command="{Binding SearchAccountCommand}">
+                            </Button>
+                        </Grid>
                         </Border>
                         <Button Grid.Column="2" HorizontalAlignment="Right" Margin="4" Padding="8"
                             Style="{StaticResource MaterialDesignRaisedButton}"
@@ -120,43 +130,57 @@
                             </StackPanel>
                         </Button>
                     </Grid>
-                <Border Grid.Row="1" Background="{StaticResource MaterialDesignChipBackground}" Padding="8">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="0.2*"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="0.2*"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="0.2*"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="0.2*"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
-                            <TextBlock Text="Admin: "/>
-                            <TextBlock Text="{Binding NumberOfAdmins}" Margin="0 0 12 0"/>
+                <Border Grid.Row="1" Padding="4 2 4 0">
+                    <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <RadioButton x:Name="rdbtAll" BorderBrush="{StaticResource PrimaryLightBrush}"
+                            Style="{StaticResource MaterialDesignTabRadioButton}"
+                            Margin="4" Command="{Binding AllCommnad}"
+                            IsChecked="True">
+                                <TextBlock Text="ALL"/>
+                            </RadioButton>
+                            <RadioButton x:Name="rdbtReservation" BorderBrush="{StaticResource PrimaryLightBrush}"
+                                Style="{StaticResource MaterialDesignTabRadioButton}"
+                                Margin="4" Command="{Binding ReservationCommnad}"
+                                IsChecked="False">
+                                <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <TextBlock Text="RESERVATION"/>
+                                    <TextBlock Text="{Binding NumberOfReservations}" Margin="6 0 0 0"/>
+                                </StackPanel>
+                            </RadioButton>
+                            <RadioButton x:Name="rdbtReceptionist" BorderBrush="{StaticResource PrimaryLightBrush}"
+                                Style="{StaticResource MaterialDesignTabRadioButton}"
+                                Margin="4" Command="{Binding ReceptionistCommnad}"
+                                IsChecked="False">
+                                <StackPanel Grid.Column="5" Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <TextBlock Text="RECEPTIONIST"/>
+                                    <TextBlock Text="{Binding NumberOfReceptionists}" Margin="6 0 0 0"/>
+                                </StackPanel>
+                            </RadioButton>
+                            <RadioButton x:Name="rdbtCashier" BorderBrush="{StaticResource PrimaryLightBrush}"
+                                Style="{StaticResource MaterialDesignTabRadioButton}"
+                                Margin="4" Command="{Binding CashierCommnad}"
+                                IsChecked="False">
+                                <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <TextBlock Text="CASHIER"/>
+                                    <TextBlock Text="{Binding NumberOfCashiers}" Margin="6 0 0 0"/>
+                                </StackPanel>
+                            </RadioButton>
+                            <RadioButton x:Name="rdbtUndefined" BorderBrush="{StaticResource PrimaryLightBrush}"
+                                Style="{StaticResource MaterialDesignTabRadioButton}"
+                                Margin="4" Command="{Binding UndefinedCommnad}"
+                                IsChecked="False">
+                                <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <TextBlock Text="UNDEFINED"/>
+                                    <TextBlock Text="{Binding NumberOfUndefined}" Margin="6 0 0 0"/>
+                                </StackPanel>
+                            </RadioButton>
                         </StackPanel>
-                        <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Center">
-                            <TextBlock Text="Reservation: "/>
-                            <TextBlock Text="{Binding NumberOfReservations}" Margin="0 0 12 0"/>
-                        </StackPanel>
-                        <StackPanel Grid.Column="5" Orientation="Horizontal" HorizontalAlignment="Center">
-                            <TextBlock Text="Receptionist: "/>
-                            <TextBlock Text="{Binding NumberOfReceptionists}" Margin="0 0 12 0"/>
-                        </StackPanel>
-                        <StackPanel Grid.Column="7" Orientation="Horizontal" HorizontalAlignment="Center">
-                            <TextBlock Text="Cashier: "/>
-                            <TextBlock Text="{Binding NumberOfCashiers}" Margin="0 0 12 0"/>
-                        </StackPanel>
-                        <StackPanel Grid.Column="9" Orientation="Horizontal" HorizontalAlignment="Center">
-                            <TextBlock Text="Undefined: "/>
-                            <TextBlock Text="{Binding NumberOfUndefined}" Margin="0 0 12 0"/>
-                        </StackPanel>
-                    </Grid>
+                        <Separator Background="{StaticResource MaterialDesignDarkSeparatorBackground}" Margin="4 0 4 0"/>
+                    </StackPanel>
                 </Border>
+                
+                <!--Data Table-->
                 <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Hidden">
                     <ItemsControl ItemsSource="{Binding Accounts}" HorizontalAlignment="left" Margin="0 5">
                         <ItemsControl.ItemsPanel>
